Fixed problem with too big boxes.

--- a/src/style/general/ultimate.less
+++ b/src/style/general/ultimate.less
@@ -1,7 +1,7 @@
 /* 
 
 File: ultimate.less 
-Copyright 2011-2012 by Jim Martens.
+Copyright 2011-2013 by Jim Martens.
 
 */
 
@@ -14,6 +14,11 @@ Copyright 2011-2012 by Jim Martens.
 ol.sortable,
 ul.sortable {
 	list-style-type: none;
+}
+
+/** definition lists **/
+dl.displayInline {
+	display: inline !important;
 }
 
 /** invisible **/
